@@ -22,6 +22,7 @@ Version 0.0.4b (in progress)
 * [Removed] The option to configure how teams are identified in the software.
 * [Fixed] Non-functional filter options on certain Admin CP pages.
 * [Fixed] Broken user editing in Admin CP.
+* [Fixed] Overwrite option for database in install no longer causes errors.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
